# jitpack

./: .gitignore  Cargo.toml  LICENSE  README.md  plan.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/jitpack-cli/: Cargo.toml  build.rs
crates/jitpack-cli/src/: main.rs
crates/jitpack-core/: Cargo.toml  build.rs
crates/jitpack-core/benches/: jit_bench.rs
crates/jitpack-core/src/: lib.rs
crates/jitpack-core/tests/: jit_stability.rs  malformed_inputs.rs
crates/jitpack-sfx/: Cargo.toml  build.rs
crates/jitpack-sfx/src/: main.rs
docs/: format-v1.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse_archive.rs
jit-engine/: jit_engine.zig  test_x86.zig
jit-engine/arch/: aarch64.zig  x86_64.zig
