[package]
name = "jitpack-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata.cargo-fuzz]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
jitpack-core = { path = "../crates/jitpack-core" }

[[bin]]
name = "fuzz_parse_archive"
path = "fuzz_targets/fuzz_parse_archive.rs"
test = false
doc = false
