[package]
name = "jitpack-core"
version.workspace = true
edition.workspace = true

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
divsufsort = "2.0.0"
getrandom = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon.workspace = true

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "jit_bench"
harness = false
